--- a/coopexpress/src/main/webapp/crear-cuenta.xhtml
+++ b/coopexpress/src/main/webapp/crear-cuenta.xhtml
@@ -14,25 +14,23 @@
 		
 		<h:panelGrid columns="3">	
 			<h:outputLabel for="txtNumeroCuenta" value="Numero Cuenta" />
-			<h:inputText id="txtNumeroCuenta"  />
+			<h:inputText id="txtNumeroCuenta" value="#{gestionCuentasBean.cuenta.numero_cuenta}" />
 			<h:message for="txtNumeroCuenta"/>
 			
 			<h:outputLabel for="txtSaldoCuenta" value="Saldo Cuenta" />
-			<h:inputText id="txtSaldoCuenta"  />
+			<h:inputText id="txtSaldoCuenta" value="#{gestionCuentasBean.cuenta.saldo_cuenta}" />
 			<h:message for="txtSaldoCuenta"/>
 			
-			<h:outputText value="" />
-			
 			<h:outputLabel value="Usuario" />
-			<h:dataTable value="" var="usuario">
+			<h:dataTable value="#{gestionCuentasBean.cuenta.usuario}" var="usuario">
 				<h:column>
 					<f:facet name="header">Cedula Usuario</f:facet>
-					<h:inputText value="" />
+					<h:inputText value="#{usuario.cedula}"/>
 				</h:column>
 			</h:dataTable>
 		</h:panelGrid>
-		<h:outputText value=""/>
-			<h:commandButton  value="Guardar" />
+		
+		<h:commandButton  value="Guardar" action="#{gestionCuentasBean.guardar()}" />
 		
 	</h:form>
 
