creacion ppaginas para CRUD de la cuenta

--- a/coopexpress/src/main/webapp/crear-cuenta.xhtml
+++ b/coopexpress/src/main/webapp/crear-cuenta.xhtml
@@ -32,7 +32,8 @@
 		</h:panelGrid>
 		
 		<h:commandButton  value="Guardar" action="#{gestionCuentasBean.guardar()}" />
-		
+		<h:commandButton action="actualizar-cuenta" value="Actualizar Datos" />
+		<h:commandButton action="listar-cuentas" value="Listar Cuentas" />
 	</h:form>
 
 </body> 
