metodos recupetrar busqueda cuenta

--- a/coopexpress/src/main/webapp/guardarusuario.xhtml
+++ b/coopexpress/src/main/webapp/guardarusuario.xhtml
@@ -11,7 +11,7 @@
 		<h:panelGrid columns="3">
 			
 			<h:outputLabel for="txtCedula" value="Cedula"  />
-			<h::inputText id="txtCedula" value="#{gestionUsuariosBean.usuario.cedula}"/>
+			<h:inputText id="txtCedula" value="#{gestionUsuariosBean.usuario.cedula}"/>
 			<h:message for="txtCedula" />
 			
 			<h:outputLabel for="txtNombre" value="Nombre" />
