--- a/coopexpress/src/main/webapp/listar-cuentas.xhtml
+++ b/coopexpress/src/main/webapp/listar-cuentas.xhtml
@@ -11,6 +11,7 @@
 
 
 	<h:form>
+	<h:commandButton action="#{gestionCuentasBean}" value="" />
 		<h:dataTable value="#{actualizarCuenta.cuentas}" var="cuenta">
 		<h:column>
 			#{cuenta.numero_cuenta}
